# Tudou

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  deploy.sh  docker-compose.yml
benchmark/tudou-hearbeat-timecache/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  StaticFileHttpServer.cpp  StaticFileHttpServer.h  StaticFileTcpServer.cpp  StaticFileTcpServer.h  main.cpp  server.cpp
examples/FileLinkServer/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  Dockerfile  FileLinkServer.cpp  FileLinkServer.h  FileLinkServerConfig.h  FileLinkService.cpp  FileLinkService.h  main.cpp
examples/FileLinkServer/auth/: AuthService.cpp  AuthService.h
examples/FileLinkServer/cache/: IFileMetaCache.h  NoopFileMetaCache.h  RedisFileMetaCache.cpp  RedisFileMetaCache.h
examples/FileLinkServer/filestore/: FileSystemStorage.cpp  FileSystemStorage.h
examples/FileLinkServer/meta/: FileMetadata.h  IFileMetaStore.h  InMemoryFileMetaStore.cpp  InMemoryFileMetaStore.h  MysqlFileMetaStore.cpp  MysqlFileMetaStore.h
examples/FileLinkServer/metacache/: IFileMetaCache.h  NoopFileMetaCache.h  RedisFileMetaCache.cpp  RedisFileMetaCache.h
examples/FileLinkServer/metastore/: FileMetadata.h  IFileMetaStore.h  InMemoryFileMetaStore.cpp  InMemoryFileMetaStore.h  MysqlFileMetaStore.cpp  MysqlFileMetaStore.h
examples/FileLinkServer/storage/: FileSystemStorage.cpp  FileSystemStorage.h
examples/FileLinkServer/util/: HttpUtil.cpp  HttpUtil.h  Uuid.cpp  Uuid.h
examples/FileLinkServer/utils/: HttpUtil.h  Sha256.h  Uuid.h
examples/JsonRpcServer/: CMakeLists.txt  client.py  main.cpp
examples/StarMind/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  StarMindConfig.h  StarMindServer.cpp  StarMindServer.h  main.cpp
examples/StaticFileHttpServer/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  StaticFileHttpServer.cpp  StaticFileHttpServer.h  StaticFileServerConfig.h  main.cpp
examples/StaticFileTcpServer/: CMakeLists.txt  StaticFileTcpServer.cpp
src/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  main.cpp
src/base/: InetAddress.cpp  InetAddress.h  NonCopyable.h  ScopedFd.h  UnitTest.cpp
src/http/: HttpContext.cpp  HttpContext.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
src/test/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  SendFileTcpServer.cpp  SendFileTcpServer.h  StaticFileHttpServer.cpp  StaticFileHttpServer.h  StaticFileTcpServer.cpp  StaticFileTcpServer.h  TestHttpParser.cpp  TestHttpParser.h  TestHttpServer.cpp  TestHttpServer.h  TestNetlib.cpp  TestNetlib.h  TestServer.cpp  TestServer.h  TestTcpServer.cpp  TestTcpServer.h  unitTest.cpp
src/test/integrateTest/StaticFileTcpServer/: CMakeLists.txt  StaticFileTcpServer.cpp  StaticFileTcpServer.h  main.cpp
src/test/unitTest/: CMakeLists.txt
src/tudou/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
src/tudou/http/: HttpContext.cpp  HttpContext.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpRouter.cpp  HttpRouter.h  HttpServer.cpp  HttpServer.h  Router.cpp  Router.h  SslContext.cpp  SslContext.h  TlsConfig.cpp  TlsConfig.h  TlsConnection.cpp  TlsConnection.h  TlsMode.h  TlsProbe.cpp  TlsProbe.h
src/tudou/integrateTest/: CMakeLists.txt  TestNetlib.cpp  main.cpp
src/tudou/net/: Buffer.cpp  Buffer.h  Socket.cpp  Socket.h
src/tudou/reactor/: Channel.cpp  Channel.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h
src/tudou/router/: Router.cpp  Router.h
src/tudou/rpc/: Coroutine.cpp  Coroutine.h  JsonRpcServer.cpp  JsonRpcServer.h  JsonRpcService.cpp  JsonRpcService.h  UnifiedRpcServer.cpp  UnifiedRpcServer.h
src/tudou/rpc/binary/: BinaryRpcChannel.cpp  BinaryRpcChannel.h  BinaryRpcCodec.cpp  BinaryRpcCodec.h  BinaryRpcRouter.cpp  BinaryRpcRouter.h  BinaryRpcServer.cpp  BinaryRpcServer.h  Protocol.h
src/tudou/rpc/json/: JsonRpcClient.cpp  JsonRpcClient.h  JsonRpcRouter.cpp  JsonRpcRouter.h  JsonRpcServer.cpp  JsonRpcServer.h
src/tudou/rpc/protobuf/: ProtobufChannel.cpp  ProtobufChannel.h  ProtobufRouter.cpp  ProtobufRouter.h  ProtobufServer.cpp  ProtobufServer.h
src/tudou/rpc/protocol/: RpcCodec.cpp  RpcCodec.h  TudouProtocol.h  protocol.proto
src/tudou/tcp/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  ConnectionHeartbeat.cpp  ConnectionHeartbeat.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h
src/tudou/test/: CMakeLists.txt  HttpContextTest.cpp  InetAddressTest.cpp  TestHttpParser.cpp  TestHttpParser.h
src/tudou/timer/: Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h
src/tudou/unitTest/: CMakeLists.txt  HttpContextTest.cpp  main.cpp
test/integrateTest/TestNetlib/: CMakeLists.txt  TestNetlib.cpp
test/unitTest/: CMakeLists.txt
test/unitTest/base/: InetAddressTest.cpp  NonCopyableTest.cpp
test/unitTest/tudou/http/: HttpContextTest.cpp  HttpRequestTest.cpp  HttpResponseTest.cpp  HttpRouterTest.cpp  HttpServerTest.cpp  RouterTest.cpp  SslContextTest.cpp  TlsConfigTest.cpp  TlsConnectionTest.cpp  TlsProbeTest.cpp
test/unitTest/tudou/net/: BufferTest.cpp  SocketTest.cpp
test/unitTest/tudou/reactor/: ChannelTest.cpp  EpollPollerTest.cpp  EventLoopTest.cpp  EventLoopThreadPoolTest.cpp  EventLoopThreadTest.cpp
test/unitTest/tudou/router/: RouterTest.cpp
test/unitTest/tudou/rpc/: CoroutineTest.cpp  JsonRpcServerTest.cpp  (+7 more)
(+119 files in other folders)
